# HSE

./: .gitignore
Courses/Algorithms and data structures/Lab2 (points in rectangles)/: CMakeLists.txt  for_test.cpp
Courses/Algorithms and data structures/Lab2 (points in rectangles)/Description/: BarCharts.xlsx  Отчет по лабораторной работе.docx
Courses/Algorithms and data structures/Lab2 (points in rectangles)/Description/Results/: graph_building_total_10.txt  graph_building_total_1000.txt  graph_building_total_1000000.txt  output_search_comparison.txt
Courses/Algorithms and data structures/Lab2 (points in rectangles)/Results/: output_total_comparison.txt
Courses/Algorithms and data structures/Lab2 (points in rectangles)/src/: constants.h  graph_builder.py  main.cpp
Courses/Algorithms and data structures/Lab2 (points in rectangles)/src/AdditionalFiles/: clock.h
Courses/Algorithms and data structures/Lab2 (points in rectangles)/src/Algorithms/: brute_force.cpp  brute_force.h  map_algorithm.cpp  map_algorithm.h  persistent_st.cpp  persistent_st.h
Courses/Algorithms and data structures/Lab2 (points in rectangles)/src/Objects/: Point.h  Rectangle.h
Courses/Algorithms and data structures/Lab2 (points in rectangles)/tests/: tests.cpp  tests.h
Courses/C++Projects/GameOfLife/: CMakeLists.txt
Courses/DB/DataBase_C++/: CMakeLists.txt  backup.cpp  backup.h  constants.h  data_base_functions.cpp  data_base_functions.h  file_work.cpp  file_work.h  main.cpp  prints.cpp  prints.h
Courses/English/: .gitignore  BarChart.docx  Essay.docx  ImaginationArt.docx  (+1 more)
(+105 files in other folders)
